# socket_udp

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
storage/: data.json
